// This file is used by Code Analysis to maintain SuppressMessage
// attributes that are applied to this project.
// Project-level suppressions either have no target or are given
// a specific target and scoped to a namespace, type, member, etc.

using System.Diagnostics.CodeAnalysis;

[assembly: SuppressMessage("Minor Code Smell", "S6608:Prefer indexing instead of \"Enumerable\" methods on types implementing \"IList\"", Justification = "<Pending>", Scope = "member", Target = "~M:GhostfolioSidekick.PortfolioViewer.ApiService.Services.SyncGrpcService.GetTableNames(GhostfolioSidekick.PortfolioViewer.ApiService.Grpc.GetTableNamesRequest,Grpc.Core.ServerCallContext)~System.Threading.Tasks.Task{GhostfolioSidekick.PortfolioViewer.ApiService.Grpc.GetTableNamesResponse}")]
[assembly: SuppressMessage("Performance", "CA1873:Avoid potentially expensive logging", Justification = "<Pending>", Scope = "member")]
